   perl source tree, not in the post-installation location, and d)
   adjusts the CWD when running the regression tests under the perl
   core. [Yitzchak Scott-Thoennes]

 - Various parts of the code were looking for the CORE/ directory in
   $Config{archlib}, $Config{installarchlib}, and $Config{archlibexp}.
   Only the latter is correct, so we use that everywhere now. 
   [Curt Tilmes]

0.11  Tue Apr  5 20:58:41 CDT 2005

 - Added a licensing statement to CBuilder.pm. [Spotted by Chip
   Salzenberg]

0.10  Mon Mar 14 20:18:19 CST 2005

 - Split out a few simple routines that format how compile switches
   are formatted, so that we can override them for platforms like VMS
   where they're very different.

 - Fix compile() and link() on VMS. [Help from Michael Schwern and
   Peter Prymmer]

0.09  Tue Feb  8 17:57:41 CST 2005

 - Fixed a broken link_executable() method on cygwin - it now uses
   'gcc' instead of $Config{ld} for the linking, because the latter is
   actually a shell script which calls a perl script which calls gcc
   in a way that only works for creating shared libraries, not
   executables.

0.08  Tue Jan 18 21:54:11 CST 2005

 - Fixed a testing error in which I had the prototype wrong for the
   main() function. [Jose Pedro Oliveira]

0.07  Wed Jan 12 21:50:34 CST 2005

 - Added the link_executable() method, which provides the ability to
   create standalone executables.  This is NOT yet implemented on
   Windows, and therefore the tests for it are skipped on Win32.
   [Alberto Manuel Brandao Simoes]

 - Integrated the latest split_like_shell() for Windows from
   Module::Build (really need to find a better home for this code...),
   which now does a much better job of handling quotes and backslashes
   and so on. [Randy Sims]

 - Fixed a couple of Windows problems related to the output-file name
   in link(), and some clobbering of the 'include_dirs' parameter to
   compile(). [Randy Sims]

0.06  Mon Dec 27 22:51:36 CST 2004
